[gd_scene load_steps=8 format=3 uid="uid://bkoucsxhus00n"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_m4cev"]
[ext_resource type="PackedScene" uid="uid://de82qgrnv8shf" path="res://scenes/player.tscn" id="2_x1xau"]
[ext_resource type="Script" path="res://scripts/ExampleLevel.gd" id="3_f8vwv"]
[ext_resource type="Script" path="res://scripts/saver_and_loader.gd" id="4_4ejsg"]
[ext_resource type="PackedScene" uid="uid://7mjoq5x80nwc" path="res://scenes/spawner.tscn" id="5_6wpw3"]
[ext_resource type="Resource" uid="uid://bxny5bfle0pkq" path="res://resources/player_stats.tres" id="5_an8px"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://scenes/virtual_joystick.tscn" id="6_fvs8i"]

[node name="Game" type="Node2D"]
script = ExtResource("1_m4cev")

[node name="Player" parent="." node_paths=PackedStringArray("joystick") instance=ExtResource("2_x1xau")]
position = Vector2(180, 345)
joystick = NodePath("../CanvasLayer/Joystick")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 295.0
offset_top = 162.0
offset_right = 457.0
offset_bottom = 243.0

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 268.0
offset_top = 34.0
offset_right = 479.0
offset_bottom = 126.0
theme_override_font_sizes/font_size = 32
text = "Save"

[node name="Button2" type="Button" parent="CanvasLayer"]
offset_left = 654.0
offset_top = 38.0
offset_right = 891.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 32
text = "Load"

[node name="Button3" type="Button" parent="CanvasLayer"]
offset_left = 662.0
offset_top = 153.0
offset_right = 909.0
offset_bottom = 254.0
theme_override_font_sizes/font_size = 32
text = "Move Speed Up"

[node name="Joystick" parent="CanvasLayer" instance=ExtResource("6_fvs8i")]
offset_left = 73.0
offset_top = -309.0
offset_right = 373.0
offset_bottom = -9.0
deadzone_size = 1.0

[node name="ShopButton" type="Button" parent="CanvasLayer"]
offset_left = 26.0
offset_top = 30.0
offset_right = 146.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 32
text = "Shop"

[node name="ExampleLevel" type="StaticBody2D" parent="."]
script = ExtResource("3_f8vwv")

[node name="Polygon2D" type="Polygon2D" parent="ExampleLevel"]
color = Color(0.835294, 0.270588, 0.380392, 1)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ExampleLevel"]
polygon = PackedVector2Array(40, 372, 33, 639, 1141, 645, 1140, 29, 1066, 29, 1067, 615, 71, 600, 79.314, 259.719, 83, 97, 1145, 34, 1138, 14, 85, 27, 25, 25)

[node name="Utilities" type="Node" parent="."]

[node name="Spawner" parent="Utilities" instance=ExtResource("5_6wpw3")]
position = Vector2(576, 428)
spawn_rate = 2.0
spawn_to_left = true

[node name="SaverAndLoader" type="Node" parent="Utilities"]
script = ExtResource("4_4ejsg")
player = ExtResource("5_an8px")

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/ShopButton" to="." method="_on_shop_button_pressed"]
